# jniplusplus

./: .gitignore  .gitmodules  LICENSE.md  README.md  settings.gradle.kts
.github/workflows/: generate-docs.yml
docs/: CMakeLists.txt  _config.yml  index.md
docs/assets/css/: style.css  style.scss
docs/user_manual/: index.md
examples/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/androidTest/java/dev/tmich/jnipp/examples/android/: ExampleInstrumentedTest.kt
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: CMakeLists.txt  Example.cpp  Example.hpp
examples/android/app/src/main/java/dev/tmich/jnipp/examples/android/app/: JniPPApp.kt
examples/android/app/src/main/java/dev/tmich/jnipp/examples/android/presentation/: MainActivity.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/app/src/main/res/values-night/: themes.xml
examples/android/app/src/test/java/dev/tmich/jnipp/examples/android/: ExampleUnitTest.kt
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/golang/: README.md  c_wrappers.cpp  example-build.sh  main.go
examples/rust/: Cargo.toml  README.md  build.rs
examples/rust/src/: main.rs  matchers.cpp  matchers.h
examples/simple_app/: CMakeLists.txt  SimpleApp.cpp
gradle/wrapper/: gradle-wrapper.properties
java/: README.md  settings.gradle.kts
java/main/: build.gradle.kts
java/main/src/dev/tmich/jnipp/: JavaToNativeExporter.java
java/main/src/dev/tmich/jnipp/logger/: JniLogger.java  JniNativeLogger.java
java_project/: README.md  settings.gradle.kts
jni++/: build.gradle.kts
jni++/src/main/cpp/: CMakeLists.txt
jni++/src/main/cpp/include/: JniPlusPlus.hpp
jni++/src/main/cpp/include/jnipp/: BoxedPrimatives.hpp  Converters.hpp  Exceptions.hpp  InvokersHighLevel.hpp  InvokersLowLevel.hpp  JniMapping.hpp  JvmNativeImpls.hpp  Loggers.hpp  References.hpp  Singletons.hpp  SwigConverters.hpp  SwigSupport.hpp  ThreadWrapper.hpp  Utilities.hpp
jni++/src/main/cpp/src/: Converters.cpp  Exceptions.cpp  JvmNativeImpls.cpp  Loggers.cpp  Singletons.cpp  ThreadWrapper.cpp  Utilities.cpp
jni++/src/main/java/dev/tmich/jnipp/: ExportToNative.java  JavaToNativeExporter.java
jni++/src/main/java/dev/tmich/jnipp/logger/: JniLogger.java  JniNativeLogger.java  JniPrintStreamLogger.java
jni++/src/test/cpp/: BoxedTests.cpp  CMakeLists.txt  ConvertersTests.cpp  JniMappingTests.cpp  JvmTestFixture.hpp  PrimitivesTests.cpp  Test.i  TestClass.cpp  TestClass.hpp
jni++/src/test/java/dev/tmich/jnipp/test/: LoadJniPlusPlus.java  TestBoxed.java  TestInstancePrimitives.java  TestStaticPrimitives.java  TestStructEquiv.java
jni++android/: build.gradle.kts
jni++android/src/main/java/dev/tmich/jnipp/android/: AndroidLogger.java
libjni++/: build.gradle.kts
libjni++/src/main/cpp/: CMakeLists.txt  Converters.hpp  JniLoggers.cpp  JniLoggers.hpp  JniPlusPlus.hpp  JniUtilities.cpp  JniUtilities.hpp  LowLevelInvokers.hpp
libjni++/src/main/cpp/include/: JniPlusPlus.hpp
libjni++/src/main/cpp/include/jnipp/: Converters.hpp  Exceptions.hpp  InvokersHighLevel.hpp  InvokersLowLevel.hpp  JvmNativeImpls.hpp  Loggers.hpp  References.hpp  Singletons.hpp  ThreadWrapper.hpp  Utilities.hpp
libjni++/src/main/cpp/src/: Converters.cpp  Exceptions.cpp  JvmNativeImpls.cpp  Loggers.cpp  Singletons.cpp  ThreadWrapper.cpp  Utilities.cpp
libjni++/src/main/java/dev/tmich/jnipp/: ExportToNative.java  JavaToNativeExporter.java
libjni++/src/main/java/dev/tmich/jnipp/logger/: JniPrintStreamLogger.java
libjni++/src/test/cpp/: CMakeLists.txt  ConvertersTests.cpp
native/: CMakeLists.txt  README.md
native/examples/golang/: README.md  c_wrappers.cpp  example-build.sh
native/examples/simple_app/: CMakeLists.txt  SimpleApp.cpp
native/libjni++/: CMakeLists.txt  Converters.hpp  HighLevelInvokers.hpp  JniLoggers.cpp  JniPlusPlus.hpp  JniUtilities.cpp  JniUtilities.hpp
native_project/: CMakeLists.txt  Doxyfile  README.md
