##
## Cargo.toml
## libjni++
##
## Created by Thomas Micheline Apr 10, 2023.
##
## Copyright © 2023 Thomas Micheline All rights reserved.
##
## This code is licensed under the 2-clause BSD license (see LICENSE.md for details)
##

[package]
name = "rust"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Micheline <tom@tmich.dev>"]
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.64.0"
